[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymddoc"
version = "0.2"
authors = [
  { name="Devin J. Cornell", email="devincornell@github.com" },
]
description = "Interface for programmatically generating markdown documents with code snippets."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://devinjcornell.com/pymddoc"

[tool.setuptools.package-data]
pymddoc = ["templates/default_ipynb_to_md_template.md"]
